# PhysicsEngine

./: main.cpp
JS/: Cube.js  Pyramid.js  Sphere.js  Triangle.js  index.html  main.js
OpenGL/: CMakeLists.txt
OpenGL/include/glad/: glad.h
OpenGL/src/: glad.c  main.cpp  test.cpp
Py/: Cube.py  Gravity.py  Matrix.py  Vertex.py  main.py
